--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.async-std]
+version = "1.12.0"
+features = ["attributes"]
+
 [dependencies]
+tempfile = "3.10.1"
+xdg = "2.5.2"
+zbus = "4.1.2"
