--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "desktop-entry-daemon"
+name = "xdg-temp-daemon"
 version = "0.1.0"
 license = "Apache-2.0"
 edition = "2021"
@@ -11,5 +11,6 @@ version = "1.12.0"
 features = ["attributes"]
 
 [dependencies]
+tempfile = "3.10.1"
 xdg = "2.5.2"
 zbus = "4.1.2"
