--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ version = "1.12.0"
 features = ["attributes"]
 
 [dependencies]
+env_logger = "0.11.3"
+log = "0.4.21"
 tempfile = "3.10.1"
 xdg = "2.5.2"
 zbus = "4.1.2"
