--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "1.12.0"
 features = ["attributes"]
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
 env_logger = "0.11.3"
 log = "0.4.21"
 tempfile = "3.10.1"
