--- a/systemd/desktop-entry-daemon-clean.service
+++ b/systemd/desktop-entry-daemon-clean.service
@@ -6,6 +6,7 @@ Before=basic.target shutdown.target
 
 [Service]
 Type=oneshot
+Environment="RUST_LOG=info"
 ExecStart=desktop-entry-daemon --clean
 SuccessExitStatus=DATAERR
 IOSchedulingClass=idle
