--- a/systemd/desktop-entry-daemon.service
+++ b/systemd/desktop-entry-daemon.service
@@ -11,4 +11,5 @@ Slice=session.slice
 [Install]
 WantedBy=graphical-session.target
 Before=graphical-session.target
+Before=cosmic-session.target
 Alias=dbus-net.ryanabx.DesktopEntry.service
