--- a/systemd/desktop-entry-daemon-clean.service
+++ b/systemd/desktop-entry-daemon-clean.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=XDG Temp daemon cleaning service
+Description=Cleaning service for desktop entry daemon
 DefaultDependencies=no
 Conflicts=shutdown.target
 Before=basic.target shutdown.target
