--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ features = ["attributes"]
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 env_logger = "0.11.3"
+freedesktop-desktop-entry = "0.5.2"
 image = "0.25.1"
 log = "0.4.21"
 svg = "0.16.0"
