--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ env_logger = "0.11.3"
 freedesktop-desktop-entry = "0.5.2"
 image = "0.25.1"
 log = "0.4.21"
+ron = "0.8.1"
 serde = { version = "1.0.198", features = ["derive"] }
 svg = "0.16.0"
 xdg = "2.5.2"
