docs: Basic documentation

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Desktop Entry Daemon Docs
+description: Documentation for Desktop Entry Daemon
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
