--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: Desktop Entry Daemon Docs
 description: Documentation for Desktop Entry Daemon
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://ryanabx.github.io/desktop-entry-daemon
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  GitHub: https://github.com/ryanabx/desktop-entry-daemon
