--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "desktop-entry-daemon"
-authors = ["Ryan Brue"]
+authors = ["Ryan Brue <ryanbrue@gmail.com>"]
 version = "0.1.0"
 license = "Apache-2.0"
+repository = "https://github.com/ryanabx/desktop-entry-daemon"
+documentation = "https://ryanabx.github.io/desktop-entry-daemon/"
+readme = "README.md"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
