chore: re-license to MIT

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "desktop-entry-daemon"
 authors = ["Ryan Brue <ryanbrue@gmail.com>"]
 version = "0.1.0"
-license = "Apache-2.0"
+license = "MIT"
 repository = "https://github.com/ryanabx/desktop-entry-daemon"
 documentation = "https://ryanabx.github.io/desktop-entry-daemon/"
 readme = "README.md"
