add test install command
Signed-off-by: Ryan Brue <ryanbrue.dev@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,3 +20,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Test install
+      run: sudo apt install -y just && just build && just install
