fix(action) cargo instead of apt
Signed-off-by: Ryan Brue <ryanbrue.dev@gmail.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Test install
-      run: sudo apt-get install -y just && just build && just install
+      run: cargo install just && just build && just install
